# CS441-final

./: CMakeLists.txt  README.md  build.sh  formatting.txt  proj3_proposal.txt
src/: main.cpp
src/graphics/: renderContext.cpp  renderContext.hpp
src/graphics/camera/: orbit_camera.cpp  orbit_camera.hpp
src/graphics/display/: display.cpp  display.hpp
src/graphics/models/: model.cpp  model.hpp
src/graphics/shaders/: shader.cpp  shader.hpp
src/graphics/textures/: texture.cpp  texture.hpp
src/resources/shaders/cel/: frag.glsl  vert.glsl
src/resources/shaders/dither/: frag.glsl  vert.glsl
src/resources/shaders/frag_phong/: frag.glsl  vert.glsl
src/resources/shaders/gooch/: frag.glsl  vert.glsl
src/resources/shaders/template/: frag.glsl
src/resources/shaders/vert_phong/: frag.glsl  vert.glsl
src/scenes/: scene.cpp  scene.hpp
